Update download links to GitHub repository URLs

--- a/ssh-setup-gui.html
+++ b/ssh-setup-gui.html
@@ -640,11 +640,9 @@ sudo ./setup-ssh-server.sh
         // 下载脚本
         function downloadScript(type) {
             if (type === 'windows') {
-                alert('请从 GitHub 仓库下载 setup-ssh-windows-safe.ps1 文件');
-                window.open('https://github.com/你的用户名/你的仓库', '_blank');
+                window.open('https://raw.githubusercontent.com/TT1nKer/remoteShell/main/setup-ssh-windows-safe.ps1', '_blank');
             } else {
-                alert('请从 GitHub 仓库下载 setup-ssh-server.sh 文件');
-                window.open('https://github.com/你的用户名/你的仓库', '_blank');
+                window.open('https://raw.githubusercontent.com/TT1nKer/remoteShell/main/setup-ssh-server.sh', '_blank');
             }
         }
     </script>
