Simplify Tailscale IP command display - remove redundant comments

--- a/ssh-setup-gui.html
+++ b/ssh-setup-gui.html
@@ -380,15 +380,11 @@ sudo systemctl enable ssh --now
                     Get Tailscale IP
                 </div>
                 <div class="step-content">
-                    <p>Run on your home computer:</p>
+                    <p>Run on your home computer (same command for all systems):</p>
                     <div class="command-box">
-# Windows (PowerShell)
-tailscale ip -4
-
-# Mac/Linux
 tailscale ip -4
                     </div>
-                    <p>Will display an IP address like <code>100.x.x.x</code></p>
+                    <p>This will display an IP address like <code>100.x.x.x</code></p>
                 </div>
             </div>
             
