--- a/ssh-setup-gui.html
+++ b/ssh-setup-gui.html
@@ -332,9 +332,13 @@
                                 <div class="command-box">
 Add-WindowsCapability -Online -Name OpenSSH.Server~~~~0.0.1.0
                                 </div>
+                                <em>如果卡在40%：按 Ctrl+C，然后用 DISM 替代：</em>
+                                <div class="command-box">
+dism /Online /Add-Capability /CapabilityName:OpenSSH.Server~~~~0.0.1.0
+                                </div>
                             </li>
-                            <li><strong>方法2：</strong> 使用我们的自动化脚本（见上方"自动脚本"选项卡）</li>
-                            <li><strong>方法3：</strong> 旧版 Windows，从 <a href="https://github.com/PowerShell/Win32-OpenSSH/releases" target="_blank">GitHub</a> 下载</li>
+                            <li><strong>方法2：</strong> 从 <a href="https://github.com/PowerShell/Win32-OpenSSH/releases" target="_blank">GitHub</a> 手动下载（最可靠）</li>
+                            <li><strong>方法3：</strong> 使用我们的自动化脚本（见上方"自动脚本"选项卡）</li>
                         </ul>
                     </div>
                     
@@ -448,6 +452,13 @@ ssh 你的用户名@100.x.x.x
                     </ul>
                     <div class="command-box">
 Add-WindowsCapability -Online -Name OpenSSH.Server~~~~0.0.1.0
+Start-Service sshd
+Set-Service -Name sshd -StartupType 'Automatic'
+                    </div>
+                    
+                    <p><em>如果卡在40%，按 Ctrl+C 然后用 DISM 替代：</em></p>
+                    <div class="command-box">
+dism /Online /Add-Capability /CapabilityName:OpenSSH.Server~~~~0.0.1.0
 Start-Service sshd
 Set-Service -Name sshd -StartupType 'Automatic'
                     </div>
